@@ -278,10 +278,11 @@ private:
     // V66: Add saveBehind
     // V67: Blobs serialize fonts instead of paints
     // V68: Paint doesn't serialize font-related stuff
+    // V69: Clean up duplicated and redundant SkImageFilter related enums
 
     // Only SKPs within the min/current picture version range (inclusive) can be read.
     static const uint32_t     MIN_PICTURE_VERSION = 56;     // august 2017
-    static const uint32_t CURRENT_PICTURE_VERSION = 68;
+    static const uint32_t CURRENT_PICTURE_VERSION = 69;
 
     static_assert(MIN_PICTURE_VERSION <= 62, "Remove kFontAxes_bad from SkFontDescriptor.cpp");
 
